--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "css-loader": "^3.6.0",
+    "file-loader": "^5.1.0",
     "moment": "^2.24.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.3.0",
+    "swiper": "^5.4.5",
     "vue": "^2.6.6",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
@@ -16,6 +23,7 @@
     "@vue/cli-plugin-babel": "^3.5.1",
     "@vue/cli-service": "^3.5.1",
     "axios": "^0.18.0",
+    "sass": "^1.67.0",
     "vue-template-compiler": "^2.5.21"
   }
 }
