--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "aos": "^3.0.0-beta.6",
     "css-loader": "^3.6.0",
+    "express": "^4.18.2",
     "file-loader": "^5.1.0",
     "moment": "^2.24.0",
     "sass-loader": "^8.0.0",
@@ -16,7 +18,10 @@
     "swiper": "^5.4.5",
     "vue": "^2.6.6",
     "vue-awesome-swiper": "^4.1.1",
+    "vue-coverflow": "^2.2.0",
     "vue-router": "^3.0.1",
+    "vue-scrollto": "^2.20.0",
+    "vue-search-select": "^3.1.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
