패키지변경

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "start": "node index.js"
+    "build": "vue-cli-service build"
   },
   "dependencies": {
     "animate.css": "^4.1.1",
